2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: encode ' in bookmarks.

2001-12-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FindJob.cc: use default session's cwd as default url path.
	* Fish.cc, Fish.h, HttpDir.cc, Http.h: add ParseLongList method
	  (for Http - by Glenn Maynard).
	* GetFileInfo.cc: call LsCache::SetDirectory.
	* MirrorJob.cc: don't delete exclude in non-root mirror; add -X/-I
	  options; handle default exclude setting mirror:exclude-regex;
	  don't exclude all directories if first pattern is include pattern.
	* PatternSet.cc, PatternSet.h: simplify matching; fix Glob matching.
	* resource.cc: remove mirror:include-regex.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: Exclude appends / for directories before matching.
	* PatternSet.cc, PatternSet.h: match last directory components
	  in Glob::Match, e.g. abc/def/ghi.zip matches def/*.zip.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FileSet.cc, FileSet.h, FindJob.cc,
	  FindJob.h, GetFileInfo.cc, LocalAccess.cc, Makefile.am, MirrorJob.cc,
	  MirrorJob.h, NetAccess.cc, PatternSet.cc, PatternSet.h, commands.cc,
	  ftpclass.cc: (PatternSet) new class. Use it for exclude/include.
	* MirrorJob.cc: fixed session leak in case of options error.

2001-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: add forgotten SetError.
	* TimeDate.h: don't use time_t as operator arg, it confuses compaq c++.

2001-12-14  Albert Chin-A-Young <china@thewrittenword.com>

	* lftp_pty.c: add missing brace.
	* misc.cc: define unsetenv prototype if needed.

2001-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (OptimizePath) new method; optimize
	  path to cd to in ExpandTildeInCWD.
	* GetFileInfo.cc: try the file as directory even if showdir, to
	  return type info; use server returned error message; don't give up